= Change Log

== Version 0.2.0 (2006/01/11)
* Released as gem
* Published to rubyforge
* Added doc directory
* Added test directory
* Added examples directory

== Version 0.1.0 (2006/01/04)
* Initial release
* Published to osteele.com
* Announced on weblog.openlaszlo.org